css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* ------------------------------------------ */

*,
body {
  color: #333;
  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
}

body {
  margin: 0;
  background-color: #f0f0f0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
}

.hero {
  width: 100%;
  height: calc(100vh - 200px); /* 150px height of header + 2*25px for of padding */
  background-image: url('../assets/cassette2.jpg');
  background-size: cover;
  background-position: center;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 0;
}

.hero h1 {
  color: #f0f0f0;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
  font-size: 5rem;
  text-align: center;
  background-color: rgba(179, 179, 179, 0.562);
  padding: 6rem;
  margin-bottom: 0;
  backdrop-filter: blur(5px);
  box-shadow: 0 14px 40px rgba(0, 0, 0, 0.35);
  line-height: 1.5;
}

.container {
  max-width: 40vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  flex-grow: 1;
}

header {
  height: 150px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 25px 0;
  box-shadow: 0 10px 24px rgba(0, 0, 0, 0.3);
  background: linear-gradient(135deg, #117f02 0%, #117f02 10%, #f0f0f0 60%, #f0f0f0 100%);
  z-index: 1;
}
.logo {
  margin-left: 4rem;
}
.logo img {
  max-width: 150px;
}

/* Nav elements */
nav {
  display: flex;
  align-items: center;
}
header > nav {
  margin-right: 4rem;
  flex-wrap: wrap;
  gap: 0.5rem;
}
nav a {
  font-size: 1.2rem;
  margin-left: 20px;
  text-decoration: none;
  color: #333;
}
a:hover {
  color: #117f02;
}
#navBottom {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 1rem;
}
#navBottom a {
  font-size: 1rem;
  margin-bottom: 0.5rem;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  box-shadow: 0 -5px 24px rgba(0, 0, 0, 0.05);
  margin-top: 4rem;
  padding: 2rem 0 0 0;
  background: #117f02;
  background: linear-gradient(135deg, #f0f0f0 0%, #f0f0f0 50%, #117f02 90%, #117f02 100%);
  /* background: linear-gradient(135deg, #117f02 0%, #117f02 2%, #f0f0f0 40%, #f0f0f0 100%); */
}
footer > div > p {
  text-align: center;
}
.footer-container-row {
  width: 90vw;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.footer-container-item-left,
.footer-container-item-middle,
.footer-container-item-right {
  flex: 1;
}
.footer-container-item-middle {
  justify-content: center;
}
.footer-container-item-right {
  display: flex;
  justify-content: flex-end;
}

section {
  width: 100%;
  margin-bottom: 2rem;
}
/* section:nth-child(n + 2) {
  margin-top: 2rem;
} */

/* Pictures and iframes */
img.picture-stand {
  max-width: 600px;
  margin: 1rem 0;
  height: auto;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
}
.sponsor-image {
  max-width: 300px;
  max-height: 300px;
  margin: 2rem;
  height: auto;
  vertical-align: center;
}
img.footer-sponsor-image {
  max-width: 150px;
  max-height: 150px;
  margin: 0.5rem;
  height: auto;
  vertical-align: center;
}
img.footer-blason {
  max-width: 150px;
  height: auto;
}
iframe {
  width: 40vw;
  min-height: 600px;
  border: none;
  margin-top: 1rem;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
}
iframe#calendar {
  min-height: 100vh;
}

/* Text elements */
h1:not(.page-title) {
  margin: 4rem 0;
}
h2 {
  margin: 2rem 0;
}
h3 {
  margin: 1rem 0;
}
p {
  line-height: 1.5;
  margin-bottom: 1rem;
}

h1 {
  font-size: 2rem;
}
h2 {
  font-size: 1.7rem;
}
h3 {
  font-size: 1.5rem;
}
h4 {
  font-size: 1.2rem;
}
p {
  font-size: 1rem;
}
a {
  color: #1f1296;
}

b,
strong,
h1,
h2,
h3,
h4 {
  font-weight: bold;
}
h1,
h2 {
  text-transform: uppercase;
}
i,
em {
  font-style: italic;
}

/* Style specific classes */
.indent {
  margin-left: 2rem;
}
.indent-double {
  margin-left: 4rem;
}
.no-margin-bottom {
  margin-bottom: 0;
}
.mb {
  margin-bottom: 1rem;
}
.mt {
  margin-top: 1rem;
}
.italic-underline {
  font-style: italic;
  text-decoration: underline;
}

/* Responsive for tablets under 1100px wide */
@media only screen and (min-width: 601px) and (max-width: 1100px) {
  .container {
    max-width: 70vw;
    padding: 1rem;
  }

  header {
    background: #f0f0f0;
    background: linear-gradient(
      135deg,
      #117f02 0%,
      #117f02 2%,
      #f0f0f0 40%,
      #f0f0f0 100%
    );
  }
  header nav {
    margin-right: 1rem;
  }

  img.picture-stand {
    max-width: 70vw;
  }
  iframe {
    width: 70vw;
    height: max-content;
  }
  footer {
    background: #f0f0f0;
  }
  img.footer-blason,
  .footer-left {
    display: none;
  }
  .footer-container-row {
    flex-direction: column-reverse;
  }
}

/* Responsive for tablets under 900px wide */

@media only screen and (min-width: 601px) and (max-width: 900px) {
  header nav {
    margin-right: 0.5rem;
  }
}

/* Responsive for phones under 600px wide */
@media only screen and (max-width: 600px) {
  .container {
    max-width: 100%;
    padding: 1rem;
  }

  .hero h1 {
    font-size: 3rem;
    padding: 2rem;
  }

  header {
    flex-direction: column;
    height: auto;
    width: 100%;
    background: #f0f0f0;
  }
  header nav {
    width: auto;
    margin: 2rem;
    flex-direction: column;
  }
  header nav a {
    margin: 1rem 0;
  }
  a.logo {
    margin: auto;
  }

  footer {
    background: #f0f0f0;
  }
  img.footer-blason,
  .footer-left {
    display: none;
  }
  .footer-container-row {
    flex-direction: column-reverse;
  }

  img.picture-stand,
  sponsor-image {
    max-width: 100%;
  }

  iframe {
    width: 100%;
    height: max-content;
  }
}

